correction de bug et test unitaire

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Form Creator"
 APP_ENV=local
 APP_KEY=base64:J42kt9L1LGYLPfymRwLLU4sdJ54EaJOvdE45Gvn31vI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
